switch to g3n engine with fixes in it

--- a/Gopkg.toml
+++ b/Gopkg.toml
@@ -1,6 +1,7 @@
 [[constraint]]
-  branch = "master"
   name = "github.com/g3n/engine"
+  source = "https://github.com/cove/engine.git"
+  branch = "oq-fixes"
 
 [[override]]
   branch = "master"
